src/catalog/src/durable/upgrade/persist/snapshots/mz_catalog__durable__upgrade__persist__v44_to_v45__tests__sync_on.snap
---
source: src/catalog/src/durable/upgrade/persist/v44_to_v45.rs
expression: actions
---
[
    Delete(
        StateUpdateKind {
            kind: Some(
                ServerConfiguration(
                    ServerConfiguration {
                        key: Some(
                            ServerConfigurationKey {
                                name: "config_has_synced_once",
                            },
                        ),
                        value: Some(
                            ServerConfigurationValue {
                                value: "on",
                            },
                        ),
                    },
                ),
            ),
        },
    ),
    Insert(
        StateUpdateKind {
            kind: Some(
                Config(
                    Config {
                        key: Some(
                            ConfigKey {
                                key: "system_config_synced",
                            },
                        ),
                        value: Some(
                            ConfigValue {
                                value: 1,
                            },
                        ),
                    },
                ),
            ),
        },
    ),
]
